k8s/istio-ingress/vs-grafana-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-grafana-monitoring-ingress
spec:
  hosts:
    - "grafana.thesurfadvisor.com"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 80
