k8s/istio-ingress/vs-jenkins-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-jenkins-ingress
spec:
  hosts:
    - "jenkins.thesurfadvisor.com"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jenkins-stg
            port:
              number: 8080
