k8s/istio-ingress/vs-kibana-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-kibana-ingress
spec:
  hosts:
    - "kibana.thesurfadvisor.com"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kibana-logging.kube-system.svc.cluster.local
            port:
              number: 5601
