k8s/istio-ingress/vs-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
    - "jenkins.thesurfadvisor.com"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jenkins-stg
            port:
              number: 8080
