k8s/istio-ingress/vs-svc-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-svc-ingress
spec:
  hosts:
    - "thesurfadvisor.com"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            prefix: /dictionary
      route:
        - destination:
            host: surf-dictionary
            port:
              number: 5001
